[package]
name = "pwsp"
version = "1.7.5"
edition = "2024"
authors = ["arabian"]
description = "PWSP lets you play audio files through your microphone. Has both CLI and GUI clients."
readme = "README.md"
homepage = "https://pwsp.arabianq.ru"
repository = "https://github.com/arabianq/pipewire-soundpad"
license = "MIT"
keywords = ["soundpad", "pipewire", "linux", "cli", "gui"]


[dependencies]
tokio = { version = "1.52.1", features = ["full"] }
async-trait = "0.1.89"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

clap = { version = "4.6.1", default-features = false, features = [
    "std",
    "suggestions",
    "help",
    "usage",
    "error-context",
    "derive",
] }
dirs = "6.0.0"
itertools = "0.14.0"

rodio = { git = "https://github.com/RustAudio/rodio.git", rev = "57ad9d8a9f30398f634fbf8e4e1d53dde7243c21", default-features = false, features = [
    "symphonia-all",
    "symphonia-libopus",
    "playback",
] }
pipewire = "0.9.2"
evdev = { version = "0.13.2", features = ["tokio"] }
rfd = { version = "0.17.2", default-features = false, features = [
    "xdg-portal",
] }
opener = { version = "0.8.4", features = ["reveal"] }

egui = { version = "0.34.1", default-features = false, features = [
    "default_fonts",
    "rayon",
] }
eframe = { version = "0.34.1", default-features = false, features = [
    "default_fonts",
    "glow",
    "x11",
    "wayland",
] }
egui_extras = "0.34.1"
egui_material_icons = "0.6.0"
egui_dnd = "0.15.0"

[[bin]]
name = "pwsp-daemon"
path = "src/bin/daemon.rs"

[[bin]]
name = "pwsp-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "pwsp-gui"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"

[package.metadata.deb]
assets = [
    [
        "target/release/pwsp-daemon",
        "usr/bin/",
        "755",
    ],
    [
        "target/release/pwsp-cli",
        "usr/bin/",
        "755",
    ],
    [
        "target/release/pwsp-gui",
        "usr/bin/",
        "755",
    ],
    [
        "assets/pwsp-gui.desktop",
        "usr/share/applications/pwsp.desktop",
        "644",
    ],
    [
        "assets/icon.png",
        "usr/share/icons/hicolor/256x256/apps/pwsp.png",
        "644",
    ],
    [
        "assets/pwsp-daemon.service",
        "usr/lib/systemd/user/pwsp-daemon.service",
        "644",
    ],
]

[patch.crates-io]
symphonia-adapter-libopus = { path = "patches/symphonia-adapter-libopus" }
